apt (0.9.1+nmu1) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/deb/deblistparser.cc:
    - only treat the native apt as essential by default

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 18 Apr 2012 18:12:07 +0200

apt (0.9.1) unstable; urgency=low

  [ David Kalnischkies ]
  * cmdline/apt-get.cc:
    - if pkgCacheFile::Generate is disabled in 'update' don't
      remove the caches (and don't try to open them)
  * apt-pkg/packagemanager.cc:
    - init counter in SmartConfigure so that the loop-breaker isn't
      triggered at random… (Closes: #669060)

  [ Christian Perrier ]
  * Fix typo in apt-get(8). Closes: #664833
  * Replace "argument" by "paramètre" in French translation.
    Merci, les Titeps!
  * Drop hardcoded "en.html" suffix in apt-secure manpage.
    Thanks to David Prevot.
  
 -- Michael Vogt <mvo@debian.org>  Tue, 17 Apr 2012 09:49:31 +0200

apt (0.9.0) unstable; urgency=low

  * upload to debian/unstable

 -- Michael Vogt <mvo@debian.org>  Mon, 16 Apr 2012 15:53:17 +0200

apt (0.9.0~exp1) experimental; urgency=low

  [ Michael Vogt ]
  * apt-pkg/packagemanager.cc:
    - fix inconsistent clog/cout usage in the debug output
    - add APT::pkgPackageManager::MaxLoopCount to ensure that the
      ordering code does not get into a endless loop when it flip-flops
      between two states
  * update libapt-inst1.4 to libapt-inst1.5 because of the cleanup 
    performed
  * prepare debian/unstable upload, if there are no issues with this
    upload it will directly go into unstable as 0.9.0  

  [ David Kalnischkies ]
  * do not update po and pot files in the process of the build as this
    causes timestamp changes for the mo files which therefore can't
    be refcounted by dpkg for your M-A: same packages
    (Closes: #659333, LP: #924628)
  * apt-inst/database.{cc,h}, apt-inst/deb/dpkgdb.{cc,h}:
    - drop instead of fix as it is only needed if you want to reimplement dpkg