@@ -3,8 +3,10 @@ apt (0.9.1+nmu1) unstable; urgency=low
   [ David Kalnischkies ]
   * apt-pkg/deb/deblistparser.cc:
     - only treat the native apt as essential by default
+  * apt-pkg/contrib/fileutl.cc:
+    - redirect stderr from compressors to /dev/null
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 18 Apr 2012 18:12:07 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 19 Apr 2012 11:04:37 +0200
 
 apt (0.9.1) unstable; urgency=low
 
